java 24 and Spring Boot 3.4.5