@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.2</version>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.4.5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -17,7 +17,7 @@
 	<description>Tech Challenge project for Spring Boot</description>
 
 	<properties>
-		<java.version>21</java.version>
+		<java.version>24</java.version>
 	</properties>
 
 	<dependencies>
@@ -55,9 +55,9 @@
 		</dependency>
 
 		<dependency>
-      	<groupId>org.springdoc</groupId>
-      	<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-      	<version>2.2.0</version>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.6</version>
 		</dependency>
 
 		<dependency>
@@ -110,10 +110,10 @@
 			<artifactId>spring-boot-starter-undertow</artifactId>
 		</dependency> -->
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator-lite</artifactId>
-		</dependency> -->
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -154,16 +154,18 @@
 					</layers>
 
 					<docker>
-						<!-- <host>unix:///run/user/1000/podman/podman.sock</host> -->
 						<bindHostToBuilder>true</bindHostToBuilder>
 				  	</docker>
 
 					<image>
-						<builder>paketobuildpacks/builder:tiny</builder>
+						<name>docker.io/sidneyaquino/fiappostech-${project.artifactId}:${project.version}</name>
+						<builder>paketobuildpacks/builder-jammy-tiny</builder>
+						<!-- <builder>bellsoft/buildpacks.builder:musl</builder> -->
 						<env>
-							<BP_JVM_CDS_ENABLE>true</BP_JVM_CDS_ENABLE>
-							<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+							<!-- <BP_JVM_JLINK_ENABLED>true</BP_JVM_JLINK_ENABLED> -->
 							<BP_SPRING_AOT_ENABLED>true</BP_SPRING_AOT_ENABLED>
+							<BP_JVM_CDS_ENABLED>true</BP_JVM_CDS_ENABLED>
+							<!-- <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE> -->
 						</env>
 					</image>
 
@@ -174,6 +176,7 @@
 						-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
 						<!-- -agentlib:native-image-agent=config-output-dir=target/native-image -->
 						<!-- -XX:+UseContainerSupport -Xmx300m -Xss512k -XX:CICompilerCount=2 -->
+						<!-- -H:+UnlockExperimentalVMOptions -->
 						<!-- -verbose:gc -XX:+PrintGCDetails -->
 					</jvmArguments>
 
@@ -206,13 +209,12 @@
 						<buildArg>--color=always</buildArg>
 						<!-- <buildArg>- -enable-sbom=cyclondx,strict,hierarchical</buildArg> -->
 						<buildArg>-J-XX:MaxRAMPercentage=80.0</buildArg>
-						<buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
-						<buildArg>--enable-preview</buildArg>
-						<buildArg>--strict-image-heap</buildArg>
+						<!-- <buildArg>- -enable-preview</buildArg> -->
 						<!-- <buildArg>- -static - -libc=musl</buildArg> -->
 						<!-- <buildArg>-H:+StaticExecutableWithDynamicLibC</buildArg> -->
+						<!-- <buildArg>- -static-nolibc</buildArg> -->
 						<buildArg>-march=native</buildArg>
-						<buildArg>--gc=parallel</buildArg>
+						<!-- <buildArg>- -gc=parallel</buildArg> -->
 						<!-- <buildArg>-gc=G1</buildArg> -->
 					</buildArgs>
 				</configuration>
